--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,12 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-    <!--    <servlet>-->
-    <!--        <servlet-name>resumeServlet</servlet-name>-->
-    <!--        <servlet-class>com.zahaand.webapp.web.ResumeServlet</servlet-class>-->
-    <!--    </servlet>-->
-    <!--    <servlet-mapping>-->
-    <!--        <servlet-name>resumeServlet</servlet-name>-->
-    <!--        <url-pattern>servlet</url-pattern>-->
-    <!--    </servlet-mapping>-->
+    <servlet>
+        <servlet-name>resumeServlet</servlet-name>
+        <servlet-class>com.zahaand.webapp.web.ResumeServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>resumeServlet</servlet-name>
+        <url-pattern>servlet</url-pattern>
+    </servlet-mapping>
 </web-app>
